--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "dotenv": "^16.0.3",
     "esbuild": "^0.20.0",
     "glob": "^10.3.3",
-    "html-minifier": "^4.0.0",
+    "html-minifier-terser": "^7.2.0",
     "lodash": "^4.17.21",
     "markdown-it": "^14.0.0",
     "markdown-it-abbr": "^2.0.0",
